--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -34,13 +34,16 @@ hr {
   border: 3px solid #bcb8bb;
 }
 
-.dashboard-left {
-  margin-left: 15em;
+.panel {
+  width: 100%;
+  height: 200px;
+  background-color: #262632;
+  margin: 10px 10px;
 }
 
-.panel {
-  width: 20em;
-  height: 12em;
-  background-color: #262632;
-  margin: 2em;
+.panel-long {
+  width: 100%;
+  height: 420px;
+  background-color: #bdb8bc;
+  margin: 10px 10px;
 }
