--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -1,11 +1,10 @@
 body {
   background-color: #151422;
   font-family: Roboto;
-
 }
 
 .wrapper {
-  
+
 }
 
 .header img {
@@ -32,23 +31,17 @@ body {
   width: 50px;
   margin: 0;
 }
-
+/* 
 hr {
-  width: 65%;
+  width: 75%;
+  text-align: center;
   border: 3px solid #bcb8bb;
-}
+} */
 
 .panel {
   width: 100%;
   height: 200px;
   background-color: #262632;
-  margin: 10px 10px;
-}
-
-.panel-long {
-  width: 100%;
-  height: 420px;
-  background-color: #bdb8bc;
   margin: 10px 10px;
 }
 
@@ -69,19 +62,24 @@ hr {
 }
 
 .city-list {
+  width: 100%;
+  height: 420px;
   color: #151422;
+  background-color: #cec8ce;
+  margin-left: 25px;
+  margin-top: -10px;
 }
 
 .city-list h3 {
   font-size: 1.6em;
   margin-left: 1em;
-  margin-top: 1em;
   font-weight: 700;
+  padding-top: 30px;
 }
 
 ol {
   font-size: 1.6em;
   font-weight: 300;
-  margin-left: 2em;
+  margin-left: 1em;
   margin-top: 1em;
 }
