--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -3,8 +3,27 @@ body {
   font-family: Roboto;
 }
 
-.wrapper {
+.status-box {
+  width: 100%;
+  height: 50px;
+  background-color: #000;
+  padding-top: 15px;
+}
 
+.status-box p {
+  display: inline;
+  color: white;
+  text-align: center;
+  margin-left: 140px;
+  margin-right: 50px;
+}
+
+#site-status {
+  color: green;
+}
+
+#api-status {
+  color: yellow;
 }
 
 .header img {
@@ -31,7 +50,8 @@ body {
   width: 50px;
   margin: 0;
 }
-/* 
+
+/*
 hr {
   width: 75%;
   text-align: center;
