add login page - front end only

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -86,7 +86,7 @@ ol {
   margin-top: 1em;
 }
 
-/* 
+/*
 footer {
   position: absolute;
   bottom: 0;
@@ -124,4 +124,54 @@ footer .container {
 
 #api-status {
   color: yellow;
+}
+
+/* ========= Login style ========= */
+
+.warning-sign {
+  width: 100%;
+  height: 25px;
+  background-color: black;
+  color: #c41524;
+}
+
+.warning-sign p {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+
+.login {
+  color: #ddd;
+  padding: 1em;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.login h1 {
+  font-size: 20px;
+}
+
+.login p {
+  font-size: 13px;
+  margin: 1px;
+}
+
+form {
+  margin-top: 20px;
+}
+
+.footer-login {
+  text-align: center;
+}
+
+.footer-login img {
+  width: 250px;
+  margin-top: 5em;
+}
+
+@media screen and (min-width:768px) {
+  .login {
+    width: 50%;
+  }
 }
