improve mobile version with larger boxes

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -91,6 +91,16 @@ html, body {
   }
 }
 
+@media screen and (min-width:768px) {
+
+  .box-benefit {
+    width: 75%;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+}
+
 /* ========= App style ========= */
 
 .header img {
