--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -17,23 +17,23 @@ html, body {
 .go-to-dash {
   background-color: #F37B75;
   width: 100%;
-  height: 100px;
+  height: 120px;
   display: flex;
   flex-flow: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 .go-to-dash h2 {
   font-size: 30px;
   display: inline;
   color: white;
-  margin-right: 20px;
+  margin: 0;
 }
 
 .go-to-dash a {
-  width: 120px;
-  margin-bottom: 10px;
+  width: 150px;
+  /* margin-bottom: 10px; */
 }
 
 .benefits {
@@ -53,7 +53,7 @@ html, body {
 }
 
 .box-benefit img {
-  width: 50px;
+  width: 100px;
   margin-top: 25px;
 }
 
@@ -113,11 +113,29 @@ html, body {
   }
 }
 
+
+
+@media screen and (max-width:768px) {
+
+  .item h3 {
+    font-size: 30px;
+  }
+
+  .item p {
+    display: none;
+  }
+
+}
+
 @media screen and (max-width:480px) {
+
+  .go.to-dash {
+
+  }
 
   .go-to-dash a {
     width: 120px;
-    margin-bottom: 10px;
+    margin-top: 10px;
   }
 
 }
